Start of sponsor logistics page (#17)
* added a sponsor logistics page to side nav

* added all plain text and links

* removed sponsorlogistics from nav; linked in sponsors instead

* edited headings, buttons, and tables

* Merge branch 'sponslog' of https://github.com/oSTEM/conference-site into sponslog

* added hackathon link to button

--- a/src/pages/2021/sponsorlogistics.mdx
+++ b/src/pages/2021/sponsorlogistics.mdx
@@ -1,10 +1,291 @@
 import { SiteLayout } from "../../components/layout/SiteLayout";
+import { CTAButton } from "../../components/button/CTAButton";
 
 <SiteLayout title="Schedule">
 
-# Conference Sponsor Logistics
+# 2021 Conference Sponsor Logistics
 
-The oSTEM conference team is hard at work in the planning stages of the 2021
-conference. Check back here later for the full list of sponsors.
+Thank you for sponsoring the oSTEM 2021 Virtual Annual Conference! This page contains the latest information regarding conference planning and sponsor participation. Please be sure to revisit this page to receive the the most up-to-date information. 
+
+# Table of Contents
+
+- [Key Deadlines and Milestones](#deadlines)
+
+- [Conference Schedule and Programming Highlights](#schedule)
+
+- [Attendee Types](#attendees)
+
+- [Pre-Conference Oppertunities](#pre-conference)
+
+    - [Career and Graduate School Bootcamp](#bootcamp)
+
+    - [New to the Conference Session](#new-session)
+
+    - [Programming Highlights](#highlights)
+        
+        - [Career and Graduate School Expo](#career-grad)
+
+        - [Poster and Hackathon Judging Session](#hackathon)
+
+- [Sponsored Workshops](#workshops)
+
+    - [50-minute Sponsored Workshop Submission](#submit)
+
+        - [What should you submit?](#submit-ideas)
+
+        - [Are you stuck and don't know what to present?](#present-ideas)
+
+- [Organization Logo Requirements](#logo)
+
+    - [Logo Format](#format)
+
+    - [Logo Usage](#usage)
+
+- [Program Advertisement Requirements](#ad-req)
+
+- [Virtual Platforms](#platform)
+
+- [Career Fair via Brazen](#brazen)
+
+    - [Booth Owner Resources](#booth-resources)
+
+    - [Representative Resources](#rep-resources)
+
+- [Contact Information, Resumes/CVs](#contact)
+
+- [oSTEM Career Center](#career-center)
+
+- [Awards Information](#awards)
+
+
+# <a name="deadlines"></a> Key Deadlines and Milestones
+
+## Sponsor Key Deadlines and Milestones
+
+| Date            | Deadlines and Milestones | Link |
+| --------------- | ------------------------ | ---- |
+| August 11, 2021 | Deadline to submit to proposals to Request for Programming | https://conference.ostem.org/2021/rfp |
+| August 16, 2021 | Individual conference registration opens |
+| August 16, 2021 | Awards applications open | https://ostem.org/page/conference-awards |
+| August 16, 2021 | Brazen goes live for sponsor booth setup (non-attendee registration) |
+| September 21, 2021 | Sponsor office hour for Booth Setup in Brazen (event link TBD) |
+| October 1, 2021 | Deadline for logo submission |
+| October 1, 2021 | Deadline for Program Advertisements (OAC only). Send to sponsorship@ostem.org |
+| October 1, 2021 | Deadline for Sponsored 1-Hour Workshop detail submission |
+| October 1, 2021 | Deadline for Assets for Hospitality Suite (Premium Sponsors only) |
+| October 1, 2021 | Non-sponsor Attendee Contact information sent to Premium Sponsors (Round 1) |
+| October 1, 2021 | Deadline for Booth Completion in Brazen |
+| October 1, 2021 | Full sponsorship payment due |
+| October 1, 2021 | Deadline to sign up for Poster Judging Volunteer | https://form.jotform.com/212157738482158 |
+| October 4, 2021 | oSTEM Career Center opens |
+| October 4, 2021 | Brazen open for attendees to view Booths and for representatives to reach out to attendees |
+| October 15, 2021 | Non-sponsor Attendee Contact information sent to Premium Sponsors (Round 2) |
+| October 15, 2021 | Awards applications closes |
+| October 15, 2021 | Conference registration closes |
+| October 28, 2021 | First conference program begins (Sponsor Workshops and Career Expo) |
+| October 28, 2021 | Non-sponsor Attendee Contact information sent to Premium Sponsors (Final Round) |
+| October 28, 2021 - October 31, 2021 | Virtual Career & Graduate Expo |
+| October 31, 2021 | Last day of oSTEM Conference |
+| November 1, 2021 | Booth Attendee Reports sent (Premium Sponsors only) |
+
+# <a name="schedule"></a> Conference Schedule and Programming Highlights
+
+Here's where you can find the [latest high-level conference schedule.](https://conference.ostem.org/2021/schedule)
+
+# <a name="attendees"></a> Attendee Types
+
+- **Full-Conference Student Attendees -** People who are currently full-time or part time students.
+
+- **Full-Conference Professional Attendees -** These attendees may and are encouraged to attend any part of the conference. 
+
+- **Full-Conference Sponsor Attendees -** These attendees are attending the conference not as oSTEM members, but as oSTEM sponsors.
+
+- **Career Expo only Attendees -** These attendees do not need to register via the conference Bizzabo Portal - Only need to register to Brazen. They will receive an email invite from Brazen after the sponsor Booth Owner adds them as Booth Rep in Brazen.
+
+# <a name="pre-conference"></a> Pre-Conference Oppertunities:
+
+Sponsoring organizations are encouraged to participate in all parts of our conference, even those that happen prior to our event. Specifically, we encourage our sponsoring organizations to participate in the following parts of the program:
+
+- **<a name="bootcamp"></a> Career and Graduate School Bootcamp - Thursday, October 19, 7:00PM-8:30PM ET -** Help conference attendees brush up on their resumes / CVs, elevator pitches, and interview skills prior to the expo. This is an opportunity to scout out attendees early, invite folks back to your booth at the expo, start to fill your interview roster, and make sure attendees are in top shape for the expo floor. Event registration link TBD.
+
+- **<a name="new-session"></a> New to the Conference Session - October 18th at 7:00PM EST -** This session is especially helpful for those attendees who have never been to an oSTEM Conference before and want to learn the lay of the land. Conducted by members of the oSTEM Conference Committee, we’ll share ways to navigate the schedule and get the most out of your attendee experience. This session will be recorded if you are unable to attend. Event registration link TBD.
+
+## <a name="highlights"></a> Programming Highlights
+
+Sponsoring organizations are encouraged to participate in all parts of our conference, taking note of the participation limits set by the attendee type above. Specifically, we encourage our sponsoring organizations to participate in the following parts of the program:
+
+### <a name="career-grad"></a> Career and Graduate School Expo
+
+Think pipe and drape booths, lines of eager attendees, and reviewing resumes / CVs to find your ideal candidates. Don’t be surprised if you see raffle drawings, on-site job/internship offers, iPads collecting contact information, and all the other trappings of your typical career fair. All sponsors with a booth will have the same booth for both Day 1 and Day 2 of the expo.
+
+- Day 1 - Thursday, October 28, 3:00-7:00 ET (4 hours)
+
+- Day 2 - Friday, October 29, 5:30-7:30 ET (2 hours)
+
+### <a name="hackathon"></a> Poster and Hackathon Judging Session - Friday, November 13, 12-3:30 PM PST  
+
+We need folks who are willing to learn more about the amazing research or hackathon project from this year's attendees. No prior experience is required. If you’re interested in being a poster or hackathon judge, please fill out the form linked at the button below.
+
+<div className="flex justify-center my-6">
+    <CTAButton onClick={"https://form.jotform.com/212157738482158"}>
+        Apply to be a Poster Judge
+    </CTAButton>
+</div>
+
+<div className="flex justify-center my-6">
+    <CTAButton onClick={"https://form.jotform.com/212309174357152"}>
+        Apply to be a Hackathon Judge
+    </CTAButton>
+</div>
+
+### Programming Changes from 2020
+
+We have expanded our programming session to include 10-minute lightning talks. These fast-paced session will allow our members to talk about a topic that they are passionate about that may range from quick tips for learning a new coding language to understanding the basics of a niche field. This is a great opportunity to learn about what our members are passionate about and how they intersect with LGBT + STEM identities.
+
+# <a name="workshops"></a> Sponsored Workshops
+
+## <a name="submit"></a> 50-minute Sponsored Workshop Submission
+
+50-min Sponsored Workshop is an a la carte sponsor benefit for the conference. This workshop  which will be hosted on webex and listed on Bizzabo. These sessions will be hosted on Thursday, Oct 28, 1:00-3:00 PM ET.  
+
+These workshops can either be pre-recorded or delivered live. 
+
+Please submit what you'd like to present no later than October 1st. Note, if you'd like to use a workshop that was previously submitted in the general Request for Programming, please let us know by emailing sponsorship@ostem.org
+
+<div className="flex justify-center py-6">
+    <CTAButton onClick={"https://form.jotform.com/211587245359160"}>
+        Submit Your Premium Workshop Information Here
+    </CTAButton>
+</div>
+
+### <a name="submit-ideas"></a> What should you submit?
+
+While you’re welcome to submit an info session type program, we encourage you to present a program that really sparks participants’ interest, has a catchy program description, and shares more about the awesome innovation along STEM or LGBTQIA advocacy and inclusion. Filling in the gaps in our selected programming is a great way to accomplish that!
+
+### <a name="present-ideas"></a> Are you stuck and don't know what to present?
+
+We want you to be successful and we’re here to help! If you’re really stuck and you want some suggestions on your program, email sponsorship@ostem.org and we’ll work through some ideas with you. Just remember to reach out soon so that we can still submit your content by the October 1 deadline.
+
+# <a name="logo"></a> Organization Logo Requirements
+
+Please submit your organization logo to sponsorship@ostem.org no later than **October 16**. Logos submitted after this deadline or in the wrong format will not be accepted and may result in an incorrect or missing logo.
+
+## <a name="format"></a> Logo format
+
+- Vector Graphic Preferred (EPS, AI, or SVG)
+
+- 300 dpi or greater PNG or JPEG accepted (not acceptable for OAC Members or Meal Sponsors)
+
+## <a name="usage"></a> Logo Usage
+
+Your logo will appear in various mediums based on your sponsorship level.
+
+|               | OAC Member | Premium | Enhanched | Standard |
+| --------------| ---------- | ------- | --------- | -------- |
+| oSTEM Website | x |
+| Program Book  | x |
+| Virtual Expo Placement | x | x | x |
+| Conference Materials | x | x | x |
+| Sponsor Boards | x | x | x | x |
+
+# <a name="ad-req"></a> Program Advertisement Requirements
+
+If your sponsorship level includes a conference program advertisement in the Program Book, please submit your advertisement to sponsorship@ostem.org no later than **October 1**. Advertisements submitted after this deadline, in the wrong format, or of incorrect size will result in a loss of this benefit. Please note that the program will be available in a pdf format but will not be delivered to attendees in a printed book.
+
+- OAC Member: Full Page (8.5" x 11")
+
+Add format
+
+- Sizes as stated above
+
+- Vector graphic preferred (EPS, AI, or PDF)
+
+- 300 dpi or greater PNG or JPEG accepted
+
+- Include margin and bleed on the advertisement, but please NO trim or printer marks
+
+- Fonts must be embedded
+
+- CMYK colorspace preferred; we cannot guarantee correct colors for non-CMYK formats
+
+Note: oSTEM may slightly reduce the size of your graphic (while keeping proportions) to accommodate margins, gutters, and small spacing between sponsor advertisements.
+
+# <a name="platform"></a> Virtual Platforms
+
+- [Bizzabo](https://www.bizzabo.com/event-resources) - Core Conference and Sessions Coordination Platform
+
+- [Brazen](https://www.brazen.com/solutions/virtual-career-fairs) - Career Fair Expo Platform
+
+- [Cisco Webex](https://www.webex.com/) - Video Conferencing Platform
+
+- [Gather](https://www.gather.town/) - Community Spaces and Poster Session
+
+# <a name="brazen"></a> Career Fair via Brazen
+
+## <a name="booth-resources"></a> Booth Owner Resources: 
+
+When you are added as a Booth Owner, you'll be notified via email with instructions showing how you can edit your booth. At that point, the booth owner will be able to go in and begin the process of setting up their booths and adding the representatives they would like to add for their organization. The following resources will help your booth owner navigate booth creation and setup within the Brazen platform. We recommend starting off reviewing the [booth editing](https://support.brazenconnect.com/hc/en-us/articles/221654667-Booth-editing) link to get an overview of the booth creation process.
+
+These additional resources will provide guidance on how to add opportunities and representatives to your booth:
+
+- [How to add oppertunities/screening to a booth](https://support.brazenconnect.com/hc/en-us/articles/221656407-How-do-I-add-opportunities-screening-to-my-booth-)
+
+- [How to add representatives to a booth](https://support.brazenconnect.com/hc/en-us/articles/221655387-How-do-I-add-representatives-to-a-booth-)
+
+For more information on [how to edit and manage booths as an exhibitor](https://support.brazenconnect.com/hc/en-us/articles/221654667-Booth-editing) please see the linked article, or sign up for one of Brazen’s weekly training sessions below:
+
+- [Tuesday Booth Owner Training Session](https://register.gotowebinar.com/rt/2926182378605317648)
+
+- [Thursday Booth Owner Training Session](https://register.gotowebinar.com/rt/2013932974202336784)
+
+## <a name="rep-resources"></a> Representative Resources:
+
+The following resources will help your event representatives navigate the Brazen platform. We recommend starting off watching the [representative training video](https://support.brazenconnect.com/hc/en-us/articles/221012347-Representative-Training) which provides a high-level overview of what to expect during the event.
+
+After watching the video - here are some additional resources for various functionalities within Brazen:
+
+- Learn about [Chat](https://support.brazenconnect.com/hc/en-us/articles/221656087-How-do-I-chat-in-an-event-) and the [Group Discussion Feed](https://support.brazenconnect.com/hc/en-us/articles/360044724793)
+
+- Learn about [Audio/Video Chatting](https://support.brazenconnect.com/hc/en-us/articles/360048559433-Representative-How-to-Audio-Video-Chat-with-an-Attendee)
+
+- Guide: [How should I prepare to participate in a live event as a representative?](https://support.brazenconnect.com/hc/en-us/articles/206502228-How-do-I-participate-in-the-live-event-as-a-representative-)
+
+- Guide: [Representative Best Practices](https://support.brazenconnect.com/hc/en-us/articles/221012347-Representative-Training) & [Chat Ratings Guide](https://support.brazenconnect.com/hc/en-us/articles/115013783948-Events-Selecting-Next-Steps)
+
+- Love to multi-task? Then you'll proably love [multi-chat](https://support.brazenconnect.com/hc/en-us/articles/217251788).
+
+- If enabled by your event admin, [SmartQueue](https://support.brazenconnect.com/hc/en-us/articles/217729667-SmartQueue) allows you to connect with the best participants for your specific roles or oppertunities during a live event.
+
+- Schedule [follow-ups](https://support.brazenconnect.com/hc/en-us/articles/206124468) to maximize how you reach out to candidates.
+
+In addition to the resources above, Brazen also hosts weekly training sessions for representatives who will be staffing booths during the event. For [more information on how to attend an event as a representative], please read the linked article or register for one of Brazen’s weekly training sessions below:
+
+- [Tuesday Rep Training Session](https://register.gotowebinar.com/rt/2088785526798138128)
+
+- [Thursday Rep Training Session](https://register.gotowebinar.com/rt/986890157813063952)
+
+# <a name="contact"></a> Contact Information, Resumes/CVs
+
+This information will be sent out to the relevant sponsorship level members via encrypted email. 
+
+# <a name="career-center"></a> oSTEM Career Center
+
+Currently oSTEM Career Center is undergoing a transition to different job platform. We expect to launch the platform in September. Please be on the lookout for email notification. 
+
+# <a name="awards"></a> Awards Information
+
+We encourage all sponsors to submit nominations for oSTEM awards so that we can recognize you for your commitment to LGBTQ+ inclusion in STEM. Self-nominations are accepted and encouraged. You can submit nominations until October 15 for any of these sponsor-specific awards:
+
+- Strategic Alliance Award - Organization
+
+- Partner Excellence Award - Individual
+
+- LGBTQ Employee Network of the Year - Group
+
+    <div className="flex justify-center my-6">
+        <CTAButton onClick={"https://ostem.org/page/conference-awards"}>
+            Apply for Oragnization, Individual, and ERG Awards
+        </CTAButton>
+    </div>
 
 </SiteLayout>
