changed logistics link in sponsors page

--- a/src/pages/2021/sponsors.mdx
+++ b/src/pages/2021/sponsors.mdx
@@ -8,11 +8,12 @@ import { SiteLayout } from "../../components/layout/SiteLayout";
     </h1>
 </div>
 
+[Current sponsors? Click here for 2021 conference logistics.](sponsorlogistics)
+
 ## Career expo search
     
 A searchable database of exhibitors (both companies and graduate schools) is available below <a href="https://ostem.retool.com/embedded/public/6e8ef24d-ea0d-4012-a772-fd16602548b9" target="_blank">(or can be viewed in a new tab)</a>.
     
 <iframe src="https://ostem.retool.com/embedded/public/6e8ef24d-ea0d-4012-a772-fd16602548b9" title="Career and Graduate School Organization Search" className="h-[600px] max-h-screen w-full rounded border border-solid border-grey-800 mt-4" />
 
-If you're a sponsor, please click the following link to find all [logistics information on exhibiting and accessing your sponsor benefits](sponsorlogistics).
 </SiteLayout>
