--- a/src/pages/2021/sponsorlogistics.mdx
+++ b/src/pages/2021/sponsorlogistics.mdx
@@ -1,7 +1,7 @@
 import { SiteLayout } from "../../components/layout/SiteLayout";
 import { CTAButton } from "../../components/button/CTAButton";
 
-<SiteLayout title="Schedule">
+<SiteLayout title="Sponsor Logistics">
 
 # 2021 Conference Sponsor Logistics
 
