--- a/src/pages/index.mdx
+++ b/src/pages/index.mdx
@@ -19,7 +19,7 @@ import { SiteLayout } from "../components/layout/SiteLayout";
         <div class="rounded-r md:col-span-3 p-4 bg-tint-spruce-light">
             <h3>Conference for LGBTQ+ people in STEM Fields</h3>
             <p>
-                The oSTEM Conference returns agains this year in a virtual format.
+                The oSTEM Conference returns again this year in a virtual format.
                 This conference is a space for LGBTQ+ students and professionals in STEM fields to share their experiences and learn from one another.
                 We have programs ranging from safe spaces to talk about queer issues to discussing the latest in research conducted by our members.
             </p>
