--- a/src/pages/2021/sponsorlogistics.mdx
+++ b/src/pages/2021/sponsorlogistics.mdx
@@ -194,7 +194,7 @@ If your sponsorship level includes a conference program advertisement in the Pro
 
 - OAC Member: Full Page (8.5" x 11")
 
-Add format
+Ad format
 
 - Sizes as stated above
 
