--- a/src/pages/2021/sponsorlogistics.mdx
+++ b/src/pages/2021/sponsorlogistics.mdx
@@ -106,7 +106,7 @@ Here's where you can find the [latest high-level conference schedule.](https://c
 
 Sponsoring organizations are encouraged to participate in all parts of our conference, even those that happen prior to our event. Specifically, we encourage our sponsoring organizations to participate in the following parts of the program:
 
-- **<a name="bootcamp"></a> Career and Graduate School Bootcamp - Thursday, October 19, 7:00PM-8:30PM ET -** Help conference attendees brush up on their resumes / CVs, elevator pitches, and interview skills prior to the expo. This is an opportunity to scout out attendees early, invite folks back to your booth at the expo, start to fill your interview roster, and make sure attendees are in top shape for the expo floor. Event registration link TBD.
+- **<a name="bootcamp"></a> Career and Graduate School Bootcamp - Thursday, October 14, 3:00PM-4:00PM PT -** Join this 1-hour workshop on how to prepare for the upcoming virtual Career and Graduate Expo during the oSTEM 11th Annual (Virtual) Conference! Learn about how to best research the exhibitors in our database and how to navigate the career fair portal Brazen, and ask your resume/elevator/interview questions directly to recruiters! Follow the event at https://www.linkedin.com/events/6848708630724780032/
 
 - **<a name="new-session"></a> New to the Conference Session - October 18th at 7:00PM EST -** This session is especially helpful for those attendees who have never been to an oSTEM Conference before and want to learn the lay of the land. Conducted by members of the oSTEM Conference Committee, we’ll share ways to navigate the schedule and get the most out of your attendee experience. This session will be recorded if you are unable to attend. Event registration link TBD.
 
