--- a/src/pages/2021/schedule.mdx
+++ b/src/pages/2021/schedule.mdx
@@ -17,7 +17,8 @@ All times listed are in Pacific Standard Time (PST). Please note that this is a 
 - 10:00 AM - 12:00 PM   Sponsored Workshop Blocks
 - 12:00 PM - 4:00 PM	  Career & Graduate School Expo - Day 1
 - 12:00 PM - 3:00 PM	  Poster Session
-
+- 4:00 PM - 6:00 PM     Academia Networking Session
+    
 ## Friday, October 29
 
 - 8:30 AM - 9:45 AM  Workshop Block 1
