updated deadlines and career center
- updated deadlines for attendee contacts and resume book
- updated career center

--- a/src/pages/2021/sponsorlogistics.mdx
+++ b/src/pages/2021/sponsorlogistics.mdx
@@ -73,20 +73,23 @@ Thank you for sponsoring the oSTEM 2021 Virtual Annual Conference! This page con
 | October 1, 2021 | Deadline for Program Advertisements (OAC only). Send to sponsorship@ostem.org |
 | October 1, 2021 | Deadline for Sponsored 1-Hour Workshop detail submission |
 | October 1, 2021 | Deadline for Assets for Hospitality Suite (Premium Sponsors only) |
-| October 1, 2021 | Non-sponsor Attendee Contact information sent to Premium Sponsors (Round 1) |
 | October 1, 2021 | Deadline for Booth Completion in Brazen |
 | October 1, 2021 | Full sponsorship payment due |
 | October 1, 2021 | Deadline to sign up for Poster Judging Volunteer | https://form.jotform.com/212157738482158 |
 | October 4, 2021 | oSTEM Career Center opens |
 | October 4, 2021 | Brazen open for attendees to view Booths and for representatives to reach out to attendees |
-| October 15, 2021 | Non-sponsor Attendee Contact information sent to Premium Sponsors (Round 2) |
+| October 11, 2021 | Resume Book sent to Enhanced and Premium Sponsors (Round 1) | 
+| October 11, 2021 | Non-sponsor Attendee Contact information sent to Premium Sponsors (Round 1) |
 | October 15, 2021 | Awards applications closes |
 | October 15, 2021 | Conference registration closes |
+| October 26, 2021 | Resume Book sent to Enhanced and Premium Sponsors (Round 2) | 
+| October 26, 2021 | Non-sponsor Attendee Contact information sent to Premium Sponsors (Round 2) |
 | October 28, 2021 | First conference program begins (Sponsor Workshops and Career Expo) |
 | October 28, 2021 | Non-sponsor Attendee Contact information sent to Premium Sponsors (Final Round) |
 | October 28, 2021 - October 31, 2021 | Virtual Career & Graduate Expo |
 | October 31, 2021 | Last day of oSTEM Conference |
-| November 1, 2021 | Booth Attendee Reports sent (Premium Sponsors only) |
+| November 1, 2021 | Resume Book sent to Enhanced and Premium Sponsor (Final Round) |
+| November 1, 2021 | Non-sponsor Attendee Contact information sent to Premium Sponsors (Final) |
 
 # <a name="schedule"></a> Conference Schedule and Programming Highlights
 
@@ -270,7 +273,12 @@ This information will be sent out to the relevant sponsorship level members via 
 
 # <a name="career-center"></a> oSTEM Career Center
 
-Currently oSTEM Career Center is undergoing a transition to different job platform. We expect to launch the platform in September. Please be on the lookout for email notification. 
+The NEW **oSTEM Career Center** is now launched! You can now post jobs and collect applications with our new job portal, which is hosted by YM Careers, the same platform used by NSBE, SHPE, SWE and many more. If you already have an account on those job portals, then your employer account will automatically appear on ours! And as conference sponsors, you will also recieve discounts per your level. Go to careers.ostem.org to set up an employer and start recruiting!
+
+Conference Sponsor Discounts - Email sponsorship@ostem.org to obtain your discount code. 
+- Premium Sponsors: 15% off all products until Jan 1, 2022
+- Enhanced Sponsors: 10% off all products until Jan 1, 2022
+- Standard Sponsors: 5% off all products until Jan 1, 2022
 
 # <a name="awards"></a> Awards Information
 
