--- a/src/pages/2021/sponsorlogistics.mdx
+++ b/src/pages/2021/sponsorlogistics.mdx
@@ -61,35 +61,38 @@ Thank you for sponsoring the oSTEM 2021 Virtual Annual Conference! This page con
 # <a name="deadlines"></a> Key Deadlines and Milestones
 
 ## Sponsor Key Deadlines and Milestones
+    Passed deadlines removed. 
 
 | Date            | Deadlines and Milestones | Link |
 | --------------- | ------------------------ | ---- |
-| August 11, 2021 | Deadline to submit to proposals to Request for Programming | https://conference.ostem.org/2021/rfp |
-| August 16, 2021 | Individual conference registration opens |
-| August 16, 2021 | Awards applications open | https://ostem.org/page/conference-awards |
-| August 16, 2021 | Brazen goes live for sponsor booth setup (non-attendee registration) |
-| September 21, 2021 | Sponsor office hour for Booth Setup in Brazen (event link TBD) |
 | October 1, 2021 | Deadline for logo submission |
 | October 1, 2021 | Deadline for Program Advertisements (OAC only). Send to sponsorship@ostem.org |
-| October 1, 2021 | Deadline for Sponsored 1-Hour Workshop detail submission |
+| October 1, 2021 | Deadline for Sponsored 1-Hour Workshop detail submission | 
 | October 1, 2021 | Deadline for Assets for Hospitality Suite (Premium Sponsors only) |
-| October 1, 2021 | Deadline for Booth Completion in Brazen |
 | October 1, 2021 | Full sponsorship payment due |
 | October 1, 2021 | Deadline to sign up for Poster Judging Volunteer | https://form.jotform.com/212157738482158 |
-| October 4, 2021 | oSTEM Career Center opens |
+| October 4, 2021 | oSTEM Career Center opens | https://careers.ostem.org/ | 
 | October 4, 2021 | Brazen open for attendees to view Booths and for representatives to reach out to attendees |
-| October 11, 2021 | Resume Book sent to Enhanced and Premium Sponsors (Round 1) | 
-| October 11, 2021 | Non-sponsor Attendee Contact information sent to Premium Sponsors (Round 1) |
-| October 15, 2021 | Awards applications closes |
+| October 15, 2021 | Awards applications closes | https://ostem.org/page/conference-awards |
 | October 15, 2021 | Conference registration closes |
-| October 26, 2021 | Resume Book sent to Enhanced and Premium Sponsors (Round 2) | 
-| October 26, 2021 | Non-sponsor Attendee Contact information sent to Premium Sponsors (Round 2) |
+| October 20, 2021 | Deadline for Booth Completion in Brazen - for copy & paste into Day 2 | Connect with your booth owner |
+| October 27, 2021 | Deadline for Booth Rep assignment in Brazen | Connect with your booth owner |
 | October 28, 2021 | First conference program begins (Sponsor Workshops and Career Expo) |
-| October 28, 2021 | Non-sponsor Attendee Contact information sent to Premium Sponsors (Final Round) |
 | October 28, 2021 - October 31, 2021 | Virtual Career & Graduate Expo |
 | October 31, 2021 | Last day of oSTEM Conference |
+
+    
+## oSTEM Deliverables Deadlines
+    
+| Date            | Deadlines and Milestones |
+| --------------- | ------------------------ |
+| October 11, 2021 | Resume Book sent to Enhanced and Premium Sponsors (Round 1) | 
+| October 11, 2021 | Non-sponsor Attendee Contact information sent to Premium Sponsors (Round 1) |
+| October 26, 2021 | Resume Book sent to Enhanced and Premium Sponsors (Round 2) | 
+| October 26, 2021 | Non-sponsor Attendee Contact information sent to Premium Sponsors (Round 2) |
 | November 1, 2021 | Resume Book sent to Enhanced and Premium Sponsor (Final Round) |
 | November 1, 2021 | Non-sponsor Attendee Contact information sent to Premium Sponsors (Final) |
+    
 
 # <a name="schedule"></a> Conference Schedule and Programming Highlights
 
@@ -109,7 +112,7 @@ Here's where you can find the [latest high-level conference schedule.](https://c
 
 Sponsoring organizations are encouraged to participate in all parts of our conference, even those that happen prior to our event. Specifically, we encourage our sponsoring organizations to participate in the following parts of the program:
 
-- **<a name="bootcamp"></a> Career and Graduate School Bootcamp - Thursday, October 14, 3:00PM-4:00PM PT -** Join this 1-hour workshop on how to prepare for the upcoming virtual Career and Graduate Expo during the oSTEM 11th Annual (Virtual) Conference! Learn about how to best research the exhibitors in our database and how to navigate the career fair portal Brazen, and ask your resume/elevator/interview questions directly to recruiters! Follow the event at https://www.linkedin.com/events/6848708630724780032/
+- **<a name="bootcamp"></a> Career and Graduate School Bootcamp - Thursday, October 14, 3:00PM-4:00PM PT -** Join this 1-hour workshop on how to prepare for the upcoming virtual Career and Graduate Expo during the oSTEM 11th Annual (Virtual) Conference! Learn about how to best research the exhibitors in our database and how to navigate the career fair portal Brazen, and ask your resume/elevator/interview questions directly to recruiters! Follow the event at https://www.linkedin.com/events/2021annualconference-careerboot6849847770963148800/
 
 - **<a name="new-session"></a> New to the Conference Session - October 18th at 7:00PM EST -** This session is especially helpful for those attendees who have never been to an oSTEM Conference before and want to learn the lay of the land. Conducted by members of the oSTEM Conference Committee, we’ll share ways to navigate the schedule and get the most out of your attendee experience. This session will be recorded if you are unable to attend. Event registration link TBD.
 
