Change hackathon link on main page to correct link Also fixes some rogue autoformatting

--- a/src/pages/index.mdx
+++ b/src/pages/index.mdx
@@ -69,7 +69,7 @@ import { SiteLayout } from "../components/layout/SiteLayout";
             to solve problems for the queer community, then this is the event for you!
         </p>
         <div class="text-center my-4">
-            <CTAButton onClick="https://www.ostem.org/page/sponsorship-opportunities">Sign up for the Hackathon</CTAButton>
+            <CTAButton onClick="/2021/hackathon">Sign up for the Hackathon</CTAButton>
         </div>
     </div>
     <div class="rounded-r md:col-span-2 tint tint-light"><img class="object-cover w-full h-full rounded-r" src="/images/hackathon.jpg" alt=""/></div>
