Update expo CTA to event link Changes the link on the main page about the expo to the event link instead of sponsorship opportunities.
Also updates some minor wording.

--- a/src/pages/index.mdx
+++ b/src/pages/index.mdx
@@ -35,13 +35,12 @@ import { SiteLayout } from "../components/layout/SiteLayout";
         <p>
             We have a dedicated Career and Graduate School Expo, allowing you to find the best opportunities from organizations and schools that will accept and support you.
             Closer to the start of the conference, we'll be providing information about what opportunities are available from each sponsor.
-            We'll have professional development virtual events before the expo to help you get ready and make the best impression
         </p>
         <p>
-            If you are representing an organization that would like to exhibit at our expo, click the button below for information about the sign up process and the benefits of exhibiting at our conference.
+            Finish your career expo profile on Brazen and start looking at what organizations will be at the Expo.
         </p>
         <div class="text-center my-4">
-            <CTAButton onClick="https://www.ostem.org/page/sponsorship-opportunities">Exhibitor Information</CTAButton>
+            <CTAButton onClick="https://app.brazenconnect.com/app/events/VgxjR/">Sign up for the Expo</CTAButton>
         </div>
     </div>
     <div class="rounded-r md:col-span-2 tint tint-light"><img class="object-cover w-full h-full rounded-r" src="/images/oSTEM.2019.0111.jpg" alt=""/></div>
