Add call-to-action on sponsors page

--- a/src/pages/2021/sponsors.mdx
+++ b/src/pages/2021/sponsors.mdx
@@ -1,3 +1,4 @@
+import { CTAButton } from "../../components/button/CTAButton";
 import { SiteLayout } from "../../components/layout/SiteLayout";
 
 <SiteLayout title="Schedule">
@@ -9,6 +10,10 @@ import { SiteLayout } from "../../components/layout/SiteLayout";
 </div>
 
 [Current sponsors? Click here for 2021 conference logistics.](sponsorlogistics)
+
+<div class="text-center my-4">
+    <CTAButton onClick="https://app.brazenconnect.com/app/events/VgxjR/">Sign up for the Expo</CTAButton>
+</div>
 
 ## Career expo search
     
