--- a/src/pages/2021/schedule.mdx
+++ b/src/pages/2021/schedule.mdx
@@ -1,4 +1,5 @@
 import { SiteLayout } from "../../components/layout/SiteLayout";
+import { CTAButton } from "../../components/button/CTAButton";
 
 <SiteLayout title="Schedule">
 
@@ -13,7 +14,7 @@ All times listed are in Pacific Standard Time (PST). Please note that this is a 
 <div className="text-2xl flex justify-center p-8">
   <CTAButton onClick="https://events.bizzabo.com/343425/agenda">View the agenda here!</CTAButton>
 </div>
-    
+
 ## Thursday, October 28
 
 - 9:00 AM - 6:00 PM     Community Breakouts
