--- a/src/pages/2021/schedule.mdx
+++ b/src/pages/2021/schedule.mdx
@@ -8,7 +8,7 @@ import { SiteLayout } from "../../components/layout/SiteLayout";
     </p>
 </div>
 
-All times listed are in Pacific Standard Time (PST). Please note that this is a high-level schedule and a more detailed schedule will be made available closer to the conference.
+All times listed are in Pacific Time (PT). Please note that this is a high-level schedule and a more detailed schedule will be made available closer to the conference.
   
   
 ## Thursday, October 28
