--- a/src/pages/2021/schedule.mdx
+++ b/src/pages/2021/schedule.mdx
@@ -1,4 +1,5 @@
 import { SiteLayout } from "../../components/layout/SiteLayout";
+import { CTAButton } from "../../components/button/CTAButton";
 
 <SiteLayout title="Schedule">
 
@@ -10,6 +11,9 @@ import { SiteLayout } from "../../components/layout/SiteLayout";
 
 All times listed are in Pacific Time (PT). Please note that this is a high-level schedule and a more detailed schedule will be made available closer to the conference.
   
+<div className="text-2xl flex justify-center p-8">
+  <CTAButton onClick="https://events.bizzabo.com/343425/agenda">View the full agenda here!</CTAButton>
+</div>
   
 ## Thursday, October 28
 
