Small nit-pick fixes for FAQ

--- a/src/pages/2022/faq.mdx
+++ b/src/pages/2022/faq.mdx
@@ -14,11 +14,12 @@ November 10-13, 2022
   
 ### Where is the 2022 conference?
   
-[Sheraton Boston Hotel](https://www.marriott.com/en-us/hotels/bosbo-sheraton-boston-hotel/overview/) (39 Dalton St, Boston, MA 02199)
+[Sheraton Boston Hotel](https://www.marriott.com/en-us/hotels/bosbo-sheraton-boston-hotel/overview/) <br/>
+39 Dalton St, Boston, MA 02199
   
 ### I have a question which is not answered here.
   
- - If you are a sponsor, please email conference-sponsorship@ostem.org
+ - If you are a sponsor, please email: conference-sponsorship@ostem.org
  - Logistics (travel, non-sponsor registration): conference-logistics@ostem.org
  - Programming (speakers, posters, other programs): conference-programming@ostem.org
  - Accessibility: access@ostem.org
