--- a/src/pages/2022/rfp.mdx
+++ b/src/pages/2022/rfp.mdx
@@ -10,8 +10,7 @@ import { TopicSquare } from "../../components/rfp/TopicSquare";
 
 
 Out in Science, Technology, Engineering, and Mathematics (oSTEM) is now
-accepting program proposals for the virtual 11th Annual oSTEM Conference 2021.
-For more information on why we decided to go virtual, read the full statement.
+accepting program proposals for the in-person 12th Annual oSTEM Conference 2022.
 
 Successful programs will touch on oSTEM’s mission statement and also incorporate
 our core values: integrity, intentionality, respect, passion, and grit.
@@ -29,9 +28,9 @@ our core values: integrity, intentionality, respect, passion, and grit.
 
 ## Submission Milestones
 
-- Monday, May 31: Request for programming released
-- Wednesday, August 11: Deadline for Submissions
-- Friday, August 27: Acceptance Notifications
+- Monday, May 30: Request for programming released
+- Wednesday, August 10: Deadline for Submissions
+- Friday, August 26: Acceptance Notifications
 
 ## Program Topics
 
@@ -89,7 +88,7 @@ There are two options for Program Submissions:
   perspective on a similar topic. Panels can be collaborative across different
   universities, companies, and industries depending on the topic. Members
   participating in the discussion are expected to be part of a live discussion.
-- **Lightning Talk (New to 2021!)**: We define a lighting talk as an individual
+- **Lightning Talk**: We define a lighting talk as an individual
   giving a quick introduction to pique interest in a specific STEM or LGBT+
   related topic. This may be a resource you have found interesting or an issue
   that future STEM professionals could investigate. These talks will be 8
@@ -148,7 +147,7 @@ submission.
 ## Additional Information
 
 For more information about the conference visit
-https://ostem.org/conference-2021.
+https://ostem.org/conference-2022.
 
 For more information about oSTEM visit https://ostem.org.
 
