--- a/src/pages/2022/rfp.mdx
+++ b/src/pages/2022/rfp.mdx
@@ -20,8 +20,11 @@ our core values: integrity, intentionality, respect, passion, and grit.
         <svg xmlns="http://www.w3.org/2000/svg" className="h-6 w-6 mr-3" fill="none" viewBox="0 0 24 24" stroke="currentColor">
             <path strokeLinecap="round" strokeLinejoin="round" strokeWidth={2} d="M12 8v4m0 4h.01M21 12a9 9 0 11-18 0 9 9 0 0118 0z" />
         </svg>
-        Our Request for Proposals is currently closed.
+        Our Request for Proposals is open! Submit your program today!
     </p>
+    <CTAButton onClick={"https://form.jotform.com/211237107190142"}>
+      Submit a Proposal
+    </CTAButton>
 </div>                
 
 
