--- a/src/pages/2022/rfp.mdx
+++ b/src/pages/2022/rfp.mdx
@@ -38,9 +38,10 @@ our core values: integrity, intentionality, respect, passion, and grit.
 ## Program Topics
 
 Presentations will be required to select from the following categories: (1)
-Technical Expertise, (2) Student Leader Development, (3) Intersectionality and
+Technical Expertise, (2) Leader Development, (3) Intersectionality and
 Identity, (4) Career and Professional Development, and (5) Other Relevant
-Topics. Example session topics that would fit in each category are provided in
+Topics. New this year we are offering a 'AI, ML & Other Emerging Technologies' track!
+Example session topics that would fit in each category are provided in
 the bullets below each category.
 
 <div className="grid gap-8 sm:grid-cols-2 my-8">
@@ -51,7 +52,13 @@ the bullets below each category.
 - In depth research presentation
 
 </TopicSquare>
-<TopicSquare title="Student Leader Development" borderColor="border-yellow-500">
+<TopicSquare title="AI, ML & Emerging Technologies" borderColor="border-orange-500">
+    
+ - How to use and apply AI/ML to various STEM disciplines
+ - Ethics in AI/ML training set selections
+ - Strategies for gender-inclusive language reform
+</TopicSquare>
+<TopicSquare title="Leader Development" borderColor="border-yellow-500">
 
 - Tools and resources for developing student programming on campus
 - Identifying leadership strengths and weaknesses
@@ -76,6 +83,12 @@ the bullets below each category.
 - Queer wellness topics
 - Transitioning in the workplace
 
+</TopicSquare>
+<TopicSquare title="AI, ML & Emerging Technologies" borderColor="border-orange-500">
+    
+ - How to use and apply AI/ML to various STEM disciplines
+ - Ethics in AI/ML training set selections
+ - Strategies for gender-inclusive language reform
 </TopicSquare>
 </div>
 
