--- a/src/pages/2022/rfp.mdx
+++ b/src/pages/2022/rfp.mdx
@@ -40,7 +40,7 @@ our core values: integrity, intentionality, respect, passion, and grit.
 Presentations will be required to select from the following categories: (1)
 Technical Expertise, (2) Leader Development, (3) Intersectionality and
 Identity, (4) Career and Professional Development, and (5) Other Relevant
-Topics. New this year we are offering a 'AI, ML & Other Emerging Technologies' track!
+Topics. New this year we are offering a 'AI, ML & Emerging Technologies' track!
 Example session topics that would fit in each category are provided in
 the bullets below each category.
 
