Add RFP and update colors to 2022

--- a/src/pages/2022/rfp.mdx
+++ b/src/pages/2022/rfp.mdx
@@ -52,12 +52,12 @@ the bullets below each category.
  - In depth research presentation
 
 </TopicSquare>
-<TopicSquare title="AI, ML & Emerging Technologies" borderColor="border-orange-500">
-    
+<TopicSquare title="AI, ML &amp; Emerging Technologies" borderColor="border-orange-500">
+
  - How to use and apply AI/ML to various STEM disciplines
  - Ethics in AI/ML training set selections
  - Strategies for gender-inclusive language reform
- 
+
 </TopicSquare>
 <TopicSquare title="Leader Development" borderColor="border-yellow-500">
 
